fix: correct YAML indentation and set folder almurad-system

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,7 +27,7 @@ jobs:
       - name: Upload site files
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .  # يرفع كل ملفات المشروع
+          path: almurad-system  # 🔥 يرفع فقط ملفات موقعك داخل هذا المجلد
 
       - name: Deploy to GitHub Pages
         id: deployment
