--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "form-data": "^4.0.0",
-    "node-fetch": "^3.3.2"
-  }
+    "node-fetch": "^3.3.2",
+    "pdf-parse": "^2.4.5"
+  },
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moradatteaa-source/almurad.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/moradatteaa-source/almurad/issues"
+  },
+  "homepage": "https://github.com/moradatteaa-source/almurad#readme"
 }
